# Pipewright

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  recipes-sources.example.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
catalog/: argo.toml  aws_codebuild.toml  aws_codepipeline.toml  azure.toml  bitbucket.toml  buildkite.toml  check_ir_coverage.py  circleci.toml  concepts.toml  dagger.toml  drone.toml  earthly.toml  gen_classification.py  gen_hub_rs.py  gen_hub_schema.py  gen_inventory.py  gen_rules.py  gen_ruleset.py  github.toml  gitlab.toml  google_cloudbuild.toml  hub_schema.toml  ir.toml  jenkins.toml  targets.toml  tekton.toml  travis.toml  woodpecker.toml
catalog/classify/: argo.toml  aws_codebuild.toml  aws_codepipeline.toml  azure.toml  bitbucket.toml  buildkite.toml  circleci.toml  dagger.toml  drone.toml  earthly.toml  github.toml  gitlab.toml  google_cloudbuild.toml  jenkins.toml  tekton.toml  travis.toml  woodpecker.toml
catalog/prose/: de.toml  en.toml
catalog/rules/: argo.ruleset.json  argo.toml  aws_codebuild.ruleset.json  aws_codebuild.toml  aws_codepipeline.ruleset.json  aws_codepipeline.toml  azure.ruleset.json  azure.toml  bitbucket.ruleset.json  bitbucket.toml  buildkite.ruleset.json  buildkite.toml  circleci.ruleset.json  circleci.toml  dagger.ruleset.json  dagger.toml  drone.ruleset.json  drone.toml  earthly.ruleset.json  earthly.toml  github.ruleset.json  github.toml  gitlab.ruleset.json  gitlab.toml  google_cloudbuild.ruleset.json  google_cloudbuild.toml  jenkins.ruleset.json  jenkins.toml  tekton.ruleset.json  tekton.toml  travis.ruleset.json  travis.toml  woodpecker.ruleset.json  woodpecker.toml
crates/chaos-generator/: Cargo.toml
crates/chaos-generator/src/: concept_inject.rs  coverage.rs  lib.rs  spec.rs  walker.rs
crates/chaos-generator/src/render/: earthfile.rs  jenkinsfile.rs  mod.rs  yaml.rs
crates/chaos-generator/tests/: coverage.rs  coverage_analysis.rs  roundtrip.rs
crates/pipeline-cli/: Cargo.toml
crates/pipeline-cli/src/: main.rs  run.rs
crates/pipeline-cli/tests/: e2e_run.rs
crates/pipeline-cst/: Cargo.toml
crates/pipeline-cst/src/: anchor.rs  cst.rs  lib.rs  merge.rs  tag.rs  tokenizer.rs
crates/pipeline-cst/tests/: anchor.rs  corpus_roundtrip.rs  identity.rs  merge.rs  tag.rs  tokenizer.rs  tokenizer_corpus.rs  tree.rs
crates/pipeline-cst/tests/corpus/: README.md
crates/pipeline-cst/tests/corpus/fixtures/: 01_single_job.yml  02_two_jobs_no_needs.yml  03_with_comments.yml  04_with_anchors.yml  05_complex_indentation.yml  07_comments_only.yml  09_variables_block.yml  10_double_quoted_strings.yml  11_single_quoted_strings.yml  12_block_literal.yml  13_block_folded.yml  14_needs_explicit.yml  15_rules_if.yml  16_when_manual.yml  17_cache_block.yml  18_artifacts.yml  19_services_block.yml  20_parallel_matrix.yml  21_extends.yml  22_include_local.yml  23_reference_tag.yml  24_retry_timeout.yml  25_environment.yml  26_workflow_rules.yml  27_child_pipeline.yml  28_tags_runner.yml  29_default_block.yml  30_deeply_nested.yml  31_trailing_whitespace.yml  32_no_trailing_newline.yml  97_carrier_comments.yml
crates/pipeline-cst/tests/corpus/real/: 01_rust_workspace.yml  02_godot_game.yml  03_flutter_app.yml
crates/pipeline-earthfile-cst/: Cargo.toml
crates/pipeline-earthfile-cst/src/: lib.rs
crates/pipeline-ffi/: Cargo.toml  cbindgen.toml
crates/pipeline-ffi/include/: pipeline_ffi.h
crates/pipeline-ffi/src/: lib.rs
crates/pipeline-ffi/tests/: lift_runnable.rs
crates/pipeline-forward/: Cargo.toml
crates/pipeline-forward/src/: lib.rs
crates/pipeline-forward/tests/: argo_valid_emit.rs  bitbucket_emit.rs  cross_structural.rs  friction.rs  no_panic.rs
crates/pipeline-hub-ir/: Cargo.toml
crates/pipeline-hub-ir/src/: conditions.rs  graph.rs  identity.rs  lib.rs  model.rs  provenance.rs  schema.rs
crates/pipeline-hub-ir/tests/: conditions.rs  identity.rs  model.rs  provenance.rs
crates/pipeline-jenkinsfile-cst/: Cargo.toml
crates/pipeline-jenkinsfile-cst/src/: lib.rs  parse.rs  tokenize.rs
crates/pipeline-recipe/: Cargo.toml
crates/pipeline-recipe/src/: config.rs  lib.rs  registry.rs
crates/pipeline-render/: Cargo.toml
crates/pipeline-render/src/: human.rs  layout.rs  lib.rs  model.rs  prose.rs  svg.rs
crates/pipeline-tgg-seeder/: Cargo.toml
crates/pipeline-tgg-seeder/src/: emit.rs  emit_earthfile.rs  emit_jenkinsfile.rs  lib.rs  scalar.rs
crates/pipeline-tgg-seeder/src/classify/: argo.rs  aws_codebuild.rs  aws_codepipeline.rs  azure.rs  bitbucket.rs  buildkite.rs  circleci.rs  dagger.rs  drone.rs  earthly.rs  github.rs  gitlab.rs  google_cloudbuild.rs  jenkins.rs  mod.rs  tekton.rs  travis.rs  woodpecker.rs
crates/pipeline-tgg-seeder/tests/: all_platforms_cascade.rs  bidi_roundtrip.rs  dsl_roundtrip.rs  first_class_attr.rs  unified_field_model.rs
docs/: interop-matrix.md
docs/user/: about.md  install.md  manual.md  quickstart.md
recipes/: LICENSE  README.md  docker-publish.recipe.yml  go-ci.recipe.yml  node-test.recipe.yml  python-ci.recipe.yml  rust-ci.recipe.yml
tests/cross_corpus/argo/: ci_build_test.yml  dag_workflow.yml
tests/cross_corpus/aws_codebuild/: ci_build_test.yml  multi_phase_buildspec.yml
tests/cross_corpus/aws_codepipeline/: ci_build_test.yml  multi_stage_release.yml
tests/cross_corpus/azure/: ci_build_test.yml  multistage_with_environments.yml
tests/cross_corpus/bitbucket/: branched_pipelines.yml  ci_build_test.yml
tests/cross_corpus/buildkite/: ci_build_test.yml  (+1 more)
ui/qt6/: CMakeLists.txt  README.md
ui/qt6/i18n/: pipewright_de.qm  pipewright_de.ts
ui/qt6/scripts/: smoke.sh
ui/qt6/src/: BridgeApi.cpp  BridgeApi.h  ProcessRunner.cpp  ProcessRunner.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  main.cpp
ui/qt6/src/qml/: CapabilitiesView.qml  EditableRow.qml  GraphEditor.qml  HumanView.qml  JobNode.qml  Main.qml  MigrationView.qml  RecipesView.qml  RunView.qml  SettingsDialog.qml
(+29 files in other folders)
