[package]
name = "pipeline-cst"
description = "Comment-preserving YAML CST for GitLab CI pipelines"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.4"
pretty_assertions = "1.4"
