[package]
name = "pipeline-earthfile-cst"
description = "Earthfile DSL → pipeline_cst::Document. The catalog-driven seeder + TGG cascade machinery on top stays unchanged."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
pipeline-cst = { path = "../pipeline-cst" }
thiserror = { workspace = true }
